Bug 506874. Don't temporarily remove ranges from the selection while we alter the frame state. Also adds a bunch of selection tests. r=smaug

--HG--
extra : rebase_source : 5d4fd55728e1167cc57451b5c80a46643191678b